--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,31 @@
+# Application Name
 spring.application.name=to-do
-server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+server.port=8000
+#KEYCLOAK
+keycloak.url=http://localhost:8080
+keycloak.realm=bitlab-realm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloak.url}/realms/${keycloak.realm}
+keycloak.client=bitlab-user-service-client
+keycloak.client-secret=wk3OGJECuzfAbM43R1KVergfzDxtrR3n
+keycloak.username=bitlab_admin
+keycloak.password=qweqwe
+keycloak.grant-type=password
+#MINIO
+minio.url=http://localhost:9000
+minio.user=root
+minio.password=root-password
+minio.bucket=dev-bucket
+#SPRING
+spring.servlet.multipart.max-file-size=5MB
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+# Hibernate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+# Liquibase
 spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+# Logging
+logging.level.web=info
